--- a/bots/supervisord.conf
+++ b/bots/supervisord.conf
@@ -2,6 +2,7 @@
 logfile=/tmp/supervisord.log
 logfile_maxbytes=50MB
 logfile_backups=10
+startretries=99
 loglevel=info
 pidfile=/tmp/supervisord.pid
 nodaemon=true
