--- a/bots/supervisord.conf
+++ b/bots/supervisord.conf
@@ -2,7 +2,6 @@
 logfile=/tmp/supervisord.log
 logfile_maxbytes=50MB
 logfile_backups=10
-startretries=99
 loglevel=info
 pidfile=/tmp/supervisord.pid
 nodaemon=true
@@ -23,9 +22,10 @@ serverurl=unix:///tmp/supervisor.sock
 command=python /marsbots/bot.py chatsubo
 autostart=true
 autorestart=true
-stdout_logfile=/tmp/chatsubo.log
+stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
 redirect_stderr=true
+startretries=999
 
 [program:superfsmon-chatsubo]
 command=superfsmon /marsbots/bots/chatsubo chatsubo
